--- a/App/CFB_Academia.csproj
+++ b/App/CFB_Academia.csproj
@@ -78,6 +78,7 @@
     <Compile Include="F_Login.Designer.cs">
       <DependentUpon>F_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Globais.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -115,6 +116,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="img\redbtn.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="img\academia.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="img\letra-x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="img\background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\greenbtn.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
